--- a/pap.csproj
+++ b/pap.csproj
@@ -65,4 +65,9 @@
 		<PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Pages\" />
+	  <Folder Include="Service\" />
+	</ItemGroup>
+
 </Project>
