Já guarda os dados no banco de dados e vejo os conselhos e a data na page de histório, e o histórico é para cada usuário.

--- a/pap.csproj
+++ b/pap.csproj
@@ -123,10 +123,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Pages\AndroidAiPage.xaml">
+	  <MauiXaml Update="Pages\AndroidPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\AndroidPage.xaml">
+	  <MauiXaml Update="Pages\CreateAccountPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\HistoryPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\WinUIAiWindow.xaml">
