--- a/Platforms/Android/AndroidManifest.xml
+++ b/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="edivaldoerasmo.pap" android:versionCode="1" android:versionName="1.0.0">
-	<application android:allowBackup="true" android:supportsRtl="true" android:label="Stress Watch"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="edivaldoerasmo.pap" android:versionCode="2" android:versionName="1.3.0">
+	<application android:allowBackup="true" android:supportsRtl="true" android:label="Stress Watch" android:icon="@mipmap/appicon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
