--- a/pap.csproj
+++ b/pap.csproj
@@ -84,7 +84,7 @@
 	<ItemGroup>
 		<!-- App Icon -->
 
-		<!-- Splash Screen -->
+		<!-- Splash Screen #0f202e -->
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -98,19 +98,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\AppIcon\appicon.jpg" />
-	  <None Remove="Resources\AppIcon\appiconfg.jpg" />
+	  <None Remove="Resources\Splash\splash.png" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiIcon Include="Resources\AppIcon\appicon.jpg" />
-	  <MauiIcon Include="Resources\AppIcon\appiconfg.jpg" />
+		<MauiIcon Include="Resources\AppIcon\appicon.png" />		
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiSplashScreen Include="Resources\Splash\splash.jpg">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </MauiSplashScreen>
+	  <MauiSplashScreen Include="Resources\Splash\splash.png" Color="#0F202E"/>
 	</ItemGroup>
 
 	<ItemGroup>
